--- a/static/index.html
+++ b/static/index.html
@@ -145,6 +145,7 @@
 
       .flashcard {
         width: 420px;
+        min-width: 280px;
         height: 280px;
         background: rgba(255, 255, 255, 0.95);
         backdrop-filter: blur(20px);
