--- a/static/index.html
+++ b/static/index.html
@@ -328,7 +328,6 @@
         }
 
         .controls {
-          flex-direction: column;
           width: 100%;
         }
 
@@ -341,8 +340,7 @@
   <body>
     <div class="container">
       <div class="header">
-        <h1>Flashcard App</h1>
-        <p>Tap cards to reveal answers</p>
+        <h1>Flashcards</h1>
       </div>
 
       <div class="controls">
