--- a/static/index.html
+++ b/static/index.html
@@ -51,7 +51,6 @@
       .header {
         text-align: center;
         color: white;
-        margin-bottom: 30px;
       }
 
       .header h1 {
@@ -77,7 +76,7 @@
       }
 
       .btn {
-        padding: 14px 28px;
+        padding: 14px 20px;
         border: none;
         border-radius: 16px;
         font-size: 18px;
@@ -114,7 +113,7 @@
       }
 
       .btn-edit {
-        background: rgba(255, 255, 255, 0.1);
+        background: rgba(255, 255, 255, 0.0);
         color: rgba(255, 255, 255, 0.6);
         padding: 8px 10px;
         font-size: 14px;
@@ -328,7 +327,7 @@
         }
 
         .controls {
-          width: 100%;
+          width: 50%;
         }
 
         .btn {
@@ -344,8 +343,7 @@
       </div>
 
       <div class="controls">
-        <button class="btn btn-primary" onclick="showCreateModal()">+</button>
-        <button class="btn btn-secondary" onclick="loadCards()">↻</button>
+        <button class="btn btn-primary" onclick="showCreateModal()">New</button>
       </div>
 
       <div id="flashcard-area">
@@ -370,7 +368,7 @@
             <button type="button" class="btn btn-cancel" onclick="closeModal()">
               Cancel
             </button>
-            <button type="submit" class="btn btn-primary">Save Card</button>
+            <button type="submit" class="btn btn-primary">Save</button>
           </div>
         </form>
       </div>
